--- a/defenseSystem/nbproject/project.properties
+++ b/defenseSystem/nbproject/project.properties
@@ -28,10 +28,10 @@ debug.test.modulepath=\
 dist.archive.excludes=
 # This directory is removed when the project is cleaned:
 dist.dir=dist
-dist.jar=${dist.dir}/DefenceSystem.jar
+dist.jar=${dist.dir}/defenseSystem.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
-dist.jlink.output=${dist.jlink.dir}/DefenceSystem
+dist.jlink.output=${dist.jlink.dir}/defenseSystem
 excludes=
 includes=**
 jar.compress=false
@@ -70,8 +70,8 @@ jlink.additionalmodules=
 # The jlink additional command line parameters
 jlink.additionalparam=
 jlink.launcher=true
-jlink.launcher.name=DefenceSystem
-main.class=defencesystem.DefenceSystem
+jlink.launcher.name=defenseSystem
+main.class=defensesystem.DefenseSystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
