--- a/defenseSystem/nbproject/project.properties
+++ b/defenseSystem/nbproject/project.properties
@@ -71,7 +71,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=defenseSystem
-main.class=defensesystem.DefenseSystem
+main.class=GUI.DefenseSystem
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
