--- a/defenseSystem/lib/nblibraries.properties
+++ b/defenseSystem/lib/nblibraries.properties
@@ -1,4 +1,5 @@
 libs.CopyLibs.classpath=\
-    ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar
+    ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar;\
+    ${base}/CopyLibs/jaco-mp3-player-0.9.3.jar
 libs.CopyLibs.displayName=CopyLibs Task
 libs.CopyLibs.prop-version=3.0
