--- a/defenseSystem/lib/nblibraries.properties
+++ b/defenseSystem/lib/nblibraries.properties
@@ -1,3 +1,7 @@
+libs.absolutelayout.classpath=\
+    ${base}/absolutelayout/AbsoluteLayout.jar;\
+    ${base}/absolutelayout/jaco-mp3-player-0.9.3.jar
+libs.absolutelayout.displayName=Absolute Layout
 libs.CopyLibs.classpath=\
     ${base}/CopyLibs/org-netbeans-modules-java-j2seproject-copylibstask.jar;\
     ${base}/CopyLibs/jaco-mp3-player-0.9.3.jar
